Fix opening of archives whose mimetype cannot be detected-by-content

shared-mime-info 1.5 (and thus QMimeDatabase) cannot
detect-by-content tar archives created with the --format=v7 flag.
Instead of adding another exception (like we did for ISO files), let's just use
the mimetype detected from the extension if the one from content could not be
determined.

BUG: 355955
FIXED-IN: 15.12.0